--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "author": "Tim Caswell <tim@creationix.com> (http://creationix.com/)",
+  "author": [ 
+    "Tim Caswell <tim@creationix.com> (http://creationix.com/)",
+    "Mikael Bourges-Sevenier <mikeseven@gmail.com>" ],
   "name": "webgl",
   "description": "webGL bindings for node",
-  "version": "0.0.7",
+  "version": "0.1.0",
   "main": "webgl.js",
   "engines": {
-    "node": ">=0.4.0"
+    "node": ">=0.6.6"
   },
   "dependencies": {},
   "devDependencies": {}
