--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "name": "webgl",
   "description": "webGL bindings for node",
   "version": "0.1.0",
-  "main": "webgl.js",
+  "main": "index.js",
   "engines": {
     "node": ">=0.6.6"
   },
