--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://mikeseven@github.com/mikeseven/node-webgl.git"
+    "url": "https://github.com/mikeseven/node-webgl.git"
   },
   "scripts": {
     "install": "node-gyp rebuild"
