fix issues with loading bindings with debug node

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     }
   ],
   "dependencies": {
-    "node-glfw": ">=0.3.0",
-    "nan": "^0.8.0"
+    "bindings": "^1.2.1",
+    "nan": "^0.8.0",
+    "node-glfw": ">=0.3.0"
   }
 }
