fix GLFW3 handling of window vs framebuffer size, especially for Mac Retina

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Mikael Bourges-Sevenier <mikeseven@gmail.com>",
   "name": "node-webgl",
   "description": "WebGL bindings for node",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "main": "index.js",
   "keywords": [
     "webgl",
@@ -25,12 +25,7 @@
   "scripts": {
     "install": "node-gyp rebuild"
   },
-  "licenses": [
-    {
-      "type": "BSD",
-      "url": "http://github.com/mikeseven/node-webgl/raw/master/LICENSES"
-    }
-  ],
+  "license" : "BSD-3-Clause",
   "dependencies": {
     "bindings": "^1.2.1",
     "nan": "^2.1.0",
