--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
   "dependencies": {
     "bindings": "^1.2.1",
     "nan": "^2.1.0",
-    "node-glfw": ">=0.4.0"
+    "node-glfw": "lukaaash/node-glfw"
   }
 }
