--- a/package.json
+++ b/package.json
@@ -1,34 +1,39 @@
 {
-  "author": "Mikael Bourges-Sevenier <mikeseven@gmail.com>",
-  "name": "node-webgl",
-  "description": "WebGL bindings for node",
-  "version": "0.5.5",
-  "main": "index.js",
-  "keywords": [
-    "webgl",
-    "opengl"
-  ],
-  "engines": {
-    "node": ">=0.7.0"
-  },
-  "directories": {
-    "src": "src",
-    "lib": "lib",
-    "doc": "doc",
-    "examples": "examples",
-    "test": "test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/mikeseven/node-webgl.git"
-  },
-  "scripts": {
-    "install": "node-gyp rebuild"
-  },
-  "license" : "BSD-3-Clause",
-  "dependencies": {
-    "bindings": "^1.2.1",
-    "nan": "^2.1.0",
-    "node-glfw": "lukaaash/node-glfw"
-  }
+	"name": "node-webgl-raub",
+	"author": "Luis Blanco <raubtierxxx@gmail.com>",
+	"description": "WebGL for nodejs. Fork of https://github.com/djulien/node-webgl .",
+	"version": "0.5.5",
+	"main": "index.js",
+	"keywords": [
+		"webgl",
+		"opengl",
+		"3d",
+		"graphics"
+	],
+	"maintainers": [
+		{
+			"name": "Luis Blanco",
+			"email": "raubtierxxx@gmail.com",
+			"skype": "rauber666"
+		}
+	],
+	"license" : "BSD-3-Clause",
+	"directories": {
+		"src": "src",
+		"lib": "lib",
+		"doc": "doc",
+		"examples": "examples",
+		"test": "test"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/raub/node-webgl.git"
+	},
+	"scripts": {
+		"install": "node-gyp rebuild"
+	},
+	"dependencies": {
+		"nan": "^2.1.0",
+		"node-glfw-raub": "^0.4.6"
+	}
 }
