--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"url": "https://github.com/raub/node-webgl.git"
 	},
 	"dependencies": {
-		"nan": "^2.1.0",
-		"node-glfw-raub": "^0.5.0"
+		"nan": "2.1.0",
+		"node-glfw-raub": "0.5.0"
 	}
 }
