--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "nan": "2.8.0",
-    "node-glfw-raub": "0.5.3"
+    "node-glfw-raub": "0.5.3",
+    "node-addon-tools-raub" : "0.0.2"
   }
 }
