--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
-dist: trusty
+dist: xenial
 sudo: false
 
 language: node_js
 
 node_js:
-  - "8.11.4"
+  - "10.13.0"
 
 
 before_install:
   - npm conf set strict-ssl false
-  - npm install -g npm@6.4.0
+  - npm install -g npm@6.4.1
   - export DISPLAY=:99
   - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x24"
 
