--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,26 @@
-dist: xenial
-sudo: false
-
 language: node_js
 
 node_js:
   - "10.13.0"
 
 
-before_install:
-  - npm conf set strict-ssl false
-  - npm install -g npm@6.4.1
-  - export DISPLAY=:99
-  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x24"
+matrix:
+  include:
+  - name: "Linux"
+    os: linux
+    dist: xenial
+    sudo: false
+    before_install:
+      - export DISPLAY=:99
+      - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x24"
+    script:
+      - npm test
+  - name: "MacOS"
+    os: osx
+    script:
+      - echo OK.
 
 
 install:
   - cd test
   - npm i
-  - cd ..
-
-
-script:
-  - cd test
-  - npm test
-  - cd ..
