--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"url": "https://github.com/node-3d/webgl-raub.git"
 	},
 	"dependencies": {
-		"deps-opengl-raub": "2.0.0",
+		"deps-opengl-raub": "https://github.com/node-3d/deps-opengl-raub.git",
 		"addon-tools-raub": "https://github.com/node-3d/addon-tools-raub.git"
 	}
 }
