--- a/examples/package.json
+++ b/examples/package.json
@@ -6,6 +6,6 @@
 	"dependencies": {
 		"glfw-raub": "https://github.com/node-3d/glfw-raub.git",
 		"image-raub": "https://github.com/node-3d/image-raub.git",
-		"webgl-raub": "https://github.com/node-3d/webgl-raub.git"
+		"webgl-raub": "1.3.0"
 	}
 }
