--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
 	"author": "Luis Blanco <luisblanco1337@gmail.com>",
 	"name": "webgl-raub",
-	"version": "1.3.0",
+	"version": "2.0.0",
 	"description": "WebGL for Node.js",
 	"license": "MIT",
 	"main": "index.js",
-	"scripts": {
-		"build": "node-gyp rebuild",
-		"build:dev": "node-gyp rebuild --debug"
-	},
 	"keywords": [
 		"addon",
 		"webgl",
@@ -21,23 +17,31 @@
 		"native",
 		"gyp"
 	],
-	"engines": {
-		"node": ">=10.13.0",
-		"npm": ">=6.4.1"
-	},
-	"maintainers": [
-		{
-			"name": "Luis Blanco",
-			"email": "luisblanco1337@gmail.com",
-			"skype": "rauber666"
-		}
+	"files": [
+		"js",
+		"core.js",
+		"index.js",
+		"install.js",
+		"LICENSE",
+		"package.json",
+		"README.md"
 	],
+	"engines": {
+		"node": ">=10.16.1",
+		"npm": ">=6.9.0"
+	},
+	"config": {
+		"install": "v2.0.0"
+	},
+	"scripts": {
+		"postinstall": "node install"
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/node-3d/webgl-raub.git"
 	},
 	"dependencies": {
-		"addon-tools-raub": "4.2.0",
-		"deps-opengl-raub": "2.3.0"
+		"addon-tools-raub": "https://github.com/node-3d/addon-tools-raub",
+		"deps-opengl-raub": "https://github.com/node-3d/deps-opengl-raub"
 	}
 }
