--- a/examples/package.json
+++ b/examples/package.json
@@ -3,8 +3,11 @@
 	"version": "0.0.0",
 	"private": true,
 	"main": "lesson05.js",
+	"scripts": {
+		"postinstall": "cd .. && npm ci"
+	},
 	"dependencies": {
-		"glfw-raub": "3.1.3",
-		"image-raub": "2.1.0",
+		"glfw-raub": "https://github.com/node-3d/glfw-raub.git",
+		"image-raub": "https://github.com/node-3d/image-raub.git"
 	}
 }
