--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
 		"url": "https://github.com/node-3d/webgl-raub.git"
 	},
 	"dependencies": {
-		"addon-tools-raub": "https://github.com/node-3d/addon-tools-raub",
-		"deps-opengl-raub": "https://github.com/node-3d/deps-opengl-raub",
-		"segfault-raub": "https://github.com/node-3d/segfault-raub.git"
+		"addon-tools-raub": "5.0.0",
+		"deps-opengl-raub": "3.0.0",
+		"segfault-raub": "1.0.0"
 	}
 }
