--- a/examples/package.json
+++ b/examples/package.json
@@ -7,7 +7,7 @@
 		"postinstall": "cd .. && npm ci"
 	},
 	"dependencies": {
-		"glfw-raub": "https://github.com/node-3d/glfw-raub.git",
-		"image-raub": "https://github.com/node-3d/image-raub.git"
+		"glfw-raub": "4.2.0",
+		"image-raub": "3.1.0"
 	}
 }
