--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,7 @@
 		"build": "node-gyp rebuild && node -e \"require('addon-tools-raub/cpbin')('webgl')\""
 	},
 	"dependencies": {
-		"addon-tools-raub": "5.1.0",
-		"deps-opengl-raub": "3.0.1"
+		"addon-tools-raub": "5.1.x",
+		"deps-opengl-raub": "3.0.x"
 	}
 }
