--- a/examples/package.json
+++ b/examples/package.json
@@ -7,7 +7,7 @@
 		"postinstall": "cd .. && npm ci"
 	},
 	"dependencies": {
-		"glfw-raub": "4.4.0",
-		"image-raub": "3.1.2"
+		"glfw-raub": "4.5.x",
+		"image-raub": "3.1.x"
 	}
 }
