--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -30,7 +30,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           draft: true
-          tag_name: linux-${{ github.run }}-${{ github.sha }}
+          tag_name: windows-${{ github.run }}-${{ github.sha }}
           name: Windows
           body: Windows binaries at ${{ github.sha }}
           files: src/build/Release/webgl.node
