--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"author": "Luis Blanco <luisblanco1337@gmail.com>",
 	"name": "webgl-raub",
-	"version": "2.2.6",
+	"version": "2.3.0",
 	"description": "WebGL for Node.js",
 	"license": "MIT",
 	"main": "index.js",
@@ -28,8 +28,8 @@
 		"README.md"
 	],
 	"engines": {
-		"node": ">=14.16.0",
-		"npm": ">=6.14.1"
+		"node": ">=16.17.0",
+		"npm": ">=8.15.0"
 	},
 	"scripts": {
 		"postinstall": "node install",
@@ -39,20 +39,37 @@
 		"test-ci": "jest --coverage=false --verbose",
 		"test-coverage": "rm -rf doc/jest && jest --coverage --silent"
 	},
+	"jest": {
+		"globalSetup": "<rootDir>/test/setup.js",
+		"testEnvironment": "node",
+		"testMatch": [
+			"**/*.test.js"
+		],
+		"coverageDirectory": "doc/jest",
+		"coverageReporters": [
+			"lcov"
+		],
+		"collectCoverageFrom": [
+			"**/*.js",
+			"!**/*.test.js"
+		]
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/node-3d/webgl-raub.git"
 	},
 	"dependencies": {
-		"addon-tools-raub": "5.3.x",
-		"deps-opengl-raub": "4.0.x",
-		"segfault-raub": "1.2.x"
+		"addon-tools-raub": "^6.0.0",
+		"deps-opengl-raub": "4.1.x",
+		"segfault-raub": "^1.3.0",
+		"adm-zip": "^0.5.9"
 	},
 	"devDependencies": {
-		"eslint": "7.31.0",
-		"eslint-plugin-jest": "24.3.6",
-		"eslint-plugin-node": "11.1.0",
-		"jest": "27.0.6",
-		"typescript": "4.3.5"
+		"eslint-plugin-jest": "^27.0.4",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint": "^8.24.0",
+		"jest": "^29.0.3",
+		"node-addon-api": "^5.0.0",
+		"typescript": "^4.8.3"
 	}
 }
