--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"author": "Luis Blanco <luisblanco1337@gmail.com>",
 	"name": "webgl-raub",
-	"version": "2.3.0",
+	"version": "2.4.0",
 	"description": "WebGL for Node.js",
 	"license": "MIT",
 	"main": "index.js",
@@ -59,17 +59,17 @@
 		"url": "https://github.com/node-3d/webgl-raub.git"
 	},
 	"dependencies": {
-		"addon-tools-raub": "^6.0.0",
-		"deps-opengl-raub": "4.1.x",
-		"segfault-raub": "^1.3.0",
+		"addon-tools-raub": "^6.0.2",
+		"deps-opengl-raub": "^4.1.2",
+		"segfault-raub": "^1.3.2",
 		"adm-zip": "^0.5.9"
 	},
 	"devDependencies": {
-		"eslint-plugin-jest": "^27.0.4",
+		"eslint-plugin-jest": "^27.1.6",
 		"eslint-plugin-node": "^11.1.0",
-		"eslint": "^8.24.0",
-		"jest": "^29.0.3",
+		"eslint": "^8.28.0",
+		"jest": "^29.3.1",
 		"node-addon-api": "^5.0.0",
-		"typescript": "^4.8.3"
+		"typescript": "^4.9.3"
 	}
 }
