--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"author": "Luis Blanco <luisblanco1337@gmail.com>",
 	"name": "webgl-raub",
-	"version": "2.4.0",
+	"version": "3.0.0",
 	"description": "WebGL for Node.js",
 	"license": "MIT",
 	"main": "index.js",
@@ -28,48 +28,33 @@
 		"README.md"
 	],
 	"engines": {
-		"node": ">=16.17.0",
-		"npm": ">=8.15.0"
+		"node": ">=18.12.1",
+		"npm": ">=8.19.2"
 	},
 	"scripts": {
 		"postinstall": "node install",
 		"eslint": "eslint .",
-		"build": "cd src && node-gyp rebuild && cd ..",
-		"test": "jest --coverage=false --watch",
-		"test-ci": "jest --coverage=false --verbose",
-		"test-coverage": "rm -rf doc/jest && jest --coverage --silent"
-	},
-	"jest": {
-		"globalSetup": "<rootDir>/test/setup.js",
-		"testEnvironment": "node",
-		"testMatch": [
-			"**/*.test.js"
-		],
-		"coverageDirectory": "doc/jest",
-		"coverageReporters": [
-			"lcov"
-		],
-		"collectCoverageFrom": [
-			"**/*.js",
-			"!**/*.test.js"
-		]
+		"build-all": "cd src && node-gyp rebuild -j max --silent && node -e \"require('addon-tools-raub').cpbin('webgl')\" && cd ..",
+		"build-only": "cd src && node-gyp build -j max --silent && node -e \"require('addon-tools-raub').cpbin('webgl')\" && cd ..",
+		"test": "jest --coverage=false --watch --config=conf/jest.json",
+		"test-ci": "jest --ci --runInBand --coverage=false --forceExit --detectOpenHandles --config=conf/jest.json",
+		"test-coverage": "rm -rf doc/jest && jest --coverage --silent --config=conf/jest.json"
 	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/node-3d/webgl-raub.git"
 	},
 	"dependencies": {
-		"addon-tools-raub": "^6.0.2",
-		"deps-opengl-raub": "^4.1.2",
-		"segfault-raub": "^1.3.2",
-		"adm-zip": "^0.5.9"
+		"addon-tools-raub": "^7.0.0",
+		"deps-opengl-raub": "^5.0.1",
+		"segfault-raub": "^2.0.0"
 	},
 	"devDependencies": {
-		"eslint-plugin-jest": "^27.1.6",
+		"eslint-plugin-jest": "^27.2.0",
 		"eslint-plugin-node": "^11.1.0",
-		"eslint": "^8.28.0",
+		"eslint": "^8.31.0",
 		"jest": "^29.3.1",
 		"node-addon-api": "^5.0.0",
-		"typescript": "^4.9.3"
+		"typescript": "^4.9.4"
 	}
 }
