--- a/src/CPPLINT.cfg
+++ b/src/CPPLINT.cfg
@@ -2,6 +2,7 @@ set noparent
 linelength=110
 filter=-legal/copyright
 filter=-build/include_order
+filter=-build/include
 filter=-build/header_guard
 filter=-build/namespaces
 filter=-build/include_what_you_use
@@ -13,3 +14,4 @@ filter=-whitespace/indent
 filter=-whitespace/operators
 filter=-whitespace/parens
 filter=-readability/todo
+filter=-runtime/indentation_namespace
