--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"author": "Luis Blanco <luisblanco1337@gmail.com>",
 	"name": "webgl-raub",
-	"version": "4.1.0",
+	"version": "4.2.0",
 	"description": "WebGL for Node.js",
 	"license": "MIT",
 	"main": "index.js",
@@ -28,8 +28,8 @@
 		"README.md"
 	],
 	"engines": {
-		"node": ">=18.16.0",
-		"npm": ">=9.5.1"
+		"node": ">=20.14.0",
+		"npm": ">=10.7.0"
 	},
 	"scripts": {
 		"postinstall": "node install",
@@ -44,15 +44,15 @@
 		"url": "https://github.com/node-3d/webgl-raub.git"
 	},
 	"dependencies": {
-		"addon-tools-raub": "^7.4.0",
-		"deps-opengl-raub": "^5.1.1",
-		"segfault-raub": "^2.1.2"
+		"addon-tools-raub": "^8.0.0",
+		"deps-opengl-raub": "^6.0.0",
+		"segfault-raub": "^2.3.0"
 	},
 	"devDependencies": {
-		"@types/node": "^20.8.3",
-		"eslint": "^8.51.0",
-		"eslint-plugin-node": "^11.1.0",
-		"node-addon-api": "^7.0.0",
-		"typescript": "^5.2.2"
+		"@types/node": "^20.12.13",
+		"@eslint/js": "^9.3.0",
+		"eslint": "^9.3.0",
+		"node-addon-api": "^8.0.0",
+		"typescript": "^5.4.5"
 	}
 }
